# DXcam

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  dev-publish.yml  docs.yml  release.yml
_third_party/: webrtc_dxgi_duplicator_controller.cc  webrtc_dxgi_output_duplicator.cc
benchmarks/: copy_method_compare.py  crop_1080p_max_fps_matrix.json  crop_1080p_max_fps_winrt_only.json  cv2_rotate_vs_cython.json  d3dshot_max_fps.py  dxcam_capture.py  dxcam_max_fps.py  dxcam_processor_compare.py  dxgi_recovery_stress.py  kernel_tuning_confirm.json  kernel_tuning_grid.json  kernel_tuning_refine.json  kernel_tuning_threshold_mixed.json  kernel_tuning_tile_rotated.json  latest_micro_rotated_tile16.json  latest_micro_stats.json  latest_micro_stats_after_opt.json  latest_runtime_stats.json  mss_max_fps.py  numpy_processor_micro.py  prep_ab_micro_stats.json  timer_benchmark.py
dxcam/: CONTRIBUTING.md  __init__.py  core.py  dxcam.py  types.py  utils.py
dxcam/_libs/: d3d11.py  dxgi.py  user32.py
dxcam/core/: __init__.py  backend.py  capture_loop.py  capture_runtime.py  com_ptr.py  device.py  display_recovery.py  duplicator.py  duplicator_protocol.py  dxgi_duplicator.py  dxgi_errors.py  output.py  output_recovery.py  stagesurf.py  winrt_duplicator.py
dxcam/libs/: d3d11.py  dxgi.py
dxcam/processor/: __init__.py  _cython_kernels.c  _cython_kernels.pyx  _numpy_kernels.c  _numpy_kernels.pyx  base.py  cv2_processor.py  cython_processor.py  numpy_processor.py
dxcam/runtime/: __init__.py  backend.py  capture_worker.py  display_recovery.py  frame_buffer.py  output_recovery.py
dxcam/util/: frame.py  hwnd.py  io.py  timer.py
examples/: capture_to_video.py  instant_replay.py  live_monitor_preview.py  screen_capture_with_opencv.py  show_fullscreen_screenshot.py
scripts/: check_dev_version.py  check_version_tag.py
tests/: test_bgra_conversion_parity.py  test_dxgi_transient_policy.py  test_processor_parity.py
tests/benchmarks/: test_processor_microbenchmark.py
