[metadata]
name = dxcam
version = 0.0.2
author = ra1nty
description = a Python high-performance screenshot library for Windows
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ra1nty/DXcam
project_urls =
    Bug Tracker = https://github.com/ra1nty/DXcam/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = dxcam
python_requires = >=3.6
install_requires =
    opencv-python
    comtypes
    numpy
