[metadata]
name = dxcam
version = 0.0.3

author = ra1nty
description = A Python high-performance screenshot library for Windows use Desktop Duplication API 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ra1nty/DXcam
project_urls =
    Source = https://github.com/ra1nty/DXcam
    Tracker = https://github.com/ra1nty/DXcam/issues
keywords = screen, screenshot, screencapture, screengrab, windows
license = MIT
license_files =
    LICENSE
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: Microsoft :: Windows :: Windows 8.1
    Operating System :: Microsoft :: Windows :: Windows 10
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Graphics :: Capture
    Topic :: Multimedia :: Graphics :: Capture :: Screen Capture

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    opencv-python
    comtypes

[options.packages.find]
include = dxcam*